  - proxy: require libmpdclient 2.15 or later
* archive
  - add option to disable archive plugins in mpd.conf
* storage
  - curl: optimize database update
  - nfs: require libnfs 4.0 or later
  - nfs: support libnfs 6 (API version 2)
  - nfs: support libnfs URL arguments
* input
  - alsa: limit ALSA buffer time to 2 seconds
  - alsa: set up a channel map
  - alsa: support the alsa-lib 1.2.11 API
  - curl: add "connect_timeout" configuration
* decoder
  - ffmpeg: require FFmpeg 4.0 or later
  - ffmpeg: query supported demuxers at runtime
  - hybrid_dsd: remove
  - mpg123: prefer over "mad"
  - mpg123: support streaming
  - opus: implement bitrate calculation
  - sidplay: require libsidplayfp (drop support for the original sidplay)
  - wavpack: require libwavpack version 5
  - fix MixRamp bug
* resampler
  - soxr: require libsoxr 0.1.2 or later
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood", "ShowMovement"
* output
  - add option "always_off"
  - alsa: require alsa-lib 1.1 or later
  - pipewire: map tags "Date" and "Comment"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* Windows
  - build with libsamplerate
  - remove JACK DLL support
* remove Haiku support
* remove macOS support
* remove Boost dependency
* require libfmt 9 or later
* documentation: switch to sphinx-rtd-theme
* require Meson 1.0

ver 0.23.15 (2023/12/20)
* decoder
  - ffmpeg: fix build failure with FFmpeg 6.1
* output
  - alsa: limit buffer time to 2 seconds

ver 0.23.14 (2023/10/08)
* decoder
  - flac: fix scanning files with non-ASCII names on Windows
  - mad: fix calculation of LAME peak values
* mixer
  - wasapi: fix problem setting volume
* more libfmt 10 fixes
* fix auto-detected systemd unit directory
* Android
  - require Android 7 or newer

ver 0.23.13 (2023/05/22)
* input
  - curl: fix busy loop after connection failed