@@ -532,7 +532,8 @@ The following table lists the audio_output options valid for all plugins:
      - If set to yes, then :program:`MPD` attempts to keep this audio
        output always open.  Instead of closing at the end
        of playback, it puts the device in "pause" mode.  This works
-       only with output plugins that suport "pause" mode.
+       only with output plugins that suport "pause" mode (see
+       :ref:`ALSA option "close_on_pause" <alsa_plugin>`).
        This may be useful for streaming servers, when you don't want
        to disconnect all listeners even when playback is accidentally
        stopped.
